[gd_scene load_steps=18 format=3 uid="uid://djspvjtetbpqb"]

[ext_resource type="Script" uid="uid://dwqb6jrwlnjn8" path="res://level_menu.gd" id="1_pssaq"]
[ext_resource type="StyleBox" uid="uid://0g6flscrb7mq" path="res://yellow_panel.tres" id="2_mcy63"]

[sub_resource type="Gradient" id="Gradient_pssaq"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.554306, 0.585517, 0.657192, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_mcy63"]
gradient = SubResource("Gradient_pssaq")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_mcy63"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.397794, 0.427676, 0.496708, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_g3bd0"]
gradient = SubResource("Gradient_mcy63")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_g3bd0"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.463144, 0.624263, 0.373061, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_krrsl"]
gradient = SubResource("Gradient_g3bd0")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_krrsl"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.308819, 0.430744, 0.239727, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lnidy"]
gradient = SubResource("Gradient_krrsl")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_lnidy"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.347792, 0.643746, 0.807893, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_w32vy"]
gradient = SubResource("Gradient_lnidy")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_w32vy"]
offsets = PackedFloat32Array(0.84, 0.861818)
colors = PackedColorArray(0.184138, 0.413214, 0.536062, 1, 0.970909, 0.970909, 0.970909, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_gd4f1"]
gradient = SubResource("Gradient_w32vy")
width = 32
height = 32
fill = 2
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[sub_resource type="Animation" id="Animation_mcy63"]
resource_name = "opening"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.8, 1),
"transitions": PackedFloat32Array(0.25, 2, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1.2, 1.2), Vector2(0.8, 0.8), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_g3bd0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelContainer:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_krrsl"]
_data = {
&"RESET": SubResource("Animation_g3bd0"),
&"opening": SubResource("Animation_mcy63")
}

[node name="LevelMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pssaq")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 50)
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="PanelContainer"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_styles/panel = ExtResource("2_mcy63")

[node name="TitleLabel" type="Label" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Scegli il livello!"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(0.5, 0.5)
theme_override_constants/separation = 30
alignment = 1

[node name="Level1" type="TextureButton" parent="PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_mcy63")
texture_hover = SubResource("GradientTexture2D_g3bd0")

[node name="Label" type="Label" parent="PanelContainer/Panel/HBoxContainer/Level1"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
text = "1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level2" type="TextureButton" parent="PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_krrsl")
texture_hover = SubResource("GradientTexture2D_lnidy")

[node name="Label" type="Label" parent="PanelContainer/Panel/HBoxContainer/Level2"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
text = "2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level3" type="TextureButton" parent="PanelContainer/Panel/HBoxContainer"]
layout_mode = 2
texture_normal = SubResource("GradientTexture2D_w32vy")
texture_hover = SubResource("GradientTexture2D_gd4f1")

[node name="Label" type="Label" parent="PanelContainer/Panel/HBoxContainer/Level3"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -4.0
offset_top = -8.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Close"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_krrsl")
}

[connection signal="pressed" from="PanelContainer/Panel/HBoxContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/HBoxContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/HBoxContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="PanelContainer/Panel/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
